
(rule
 (targets c_flags.sexp)
  (action
 (with-stdout-to c_flags.sexp
    (system "echo -n '('; pkg-config --cflags SDL2_mixer; echo -n ')'"))))

(rule
 (targets c_library.sexp)
  (action
 (with-stdout-to c_library.sexp
    (system "echo -n '('; pkg-config --libs SDL2_mixer; echo -n ')'"))))

(library
 (name mix)
 (public_name caml-libsdl2-mixer)
 (libraries caml-libsdl2)
 (modes native)
 (foreign_stubs
  (language c)
  (names mix_stub)
  (flags :standard (:include c_flags.sexp)))
 (c_library_flags (:include c_library.sexp)))

